--- a/0.Side_On/pom.xml
+++ b/0.Side_On/pom.xml
@@ -113,12 +113,35 @@
 			  <version>1.3.1</version>
 			</dependency>
 			
-			<!-- ajax -->
-			<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.9.8</version>
-		</dependency>
+		<!-- jackson-core -->
+
+<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+
+<dependency>
+
+  <groupId>com.fasterxml.jackson.core</groupId>
+
+  <artifactId>jackson-core</artifactId>
+
+  <version>2.10.2</version>
+
+</dependency>
+
+ 
+
+<!-- jackson-databind -->
+
+<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+
+<dependency>
+
+  <groupId>com.fasterxml.jackson.core</groupId>
+
+  <artifactId>jackson-databind</artifactId>
+
+  <version>2.10.2</version>
+
+</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
